# Orbital-Sim-N

./: .gitignore  CMakeLists.txt  README.md  build-and-run-macos.sh  build_and_run.bat  calculation_functions.c  calculation_functions.h  conanfile.py  conanfile.txt  orbital_sim.c  sdl_elements.c  sdl_elements.h  update_log.txt  vcpkg.json  web
.github/workflows/: matrix-deploy.yml  web-deploy.yml
data/: planet_data.json  simulation_data.json  spacecraft_data.json
data analysis/: read_binary_data.py
shaders/: simple.frag  simple.vert  text.frag  text.vert
shaders/web/: simple.frag
src/: bodies.c  bodies.h  calculation_functions.c  config.c  config.h  craft_view.h  globals.c  globals.h  json_loader.c  json_loader.h  main.c  renderer.c  renderer.h  sdl_elements.c  sdl_elements.h  sim_calculations.c  sim_calculations.h  simulation.c  simulation.h  spacecraft.c  spacecraft.h  stats_window.c  stats_window.h  types.h
src-backup/: config.c  config.h  craft_view.c  sdl_elements.c  sdl_elements.h  sim_calculations.c
src/gui/: GL_renderer.c  GL_renderer.h  SDL_engine.c  SDL_engine.h  craft_view.c  craft_view.h  font.c  font.h  models.c  models.h  renderer.c  renderer.h  stb_truetype.h
src/math/: matrix.c  matrix.h
src/sim/: bodies.c  bodies.h  simulation.c  simulation.h  spacecraft.c  spacecraft.h
src/utility/: json_loader.c  sim_thread.h  telemetry_export.c  telemetry_export.h
web/: conan_profile  index.html  serve_web.py
